# Medium-Articles

./: .gitignore  .pre-commit-config.yaml  Dealing With Missing Data.ipynb  Makefile  One Hot Encoding.ipynb  Precision_Recall.ipynb  README.md  gradient_descent.c  gradient_descent_demo.c  markov_stationary.py  methods_to_tokenize.py  pyproject.toml  saturated_models.py
Data Science Basics/: Dealing With Missing Data.ipynb  Hyperparameter_Tuning_With_Hyperopt.ipynb  Hyperparameter_Tuning_With_Hyperopt_V2.ipynb  One Hot Encoding.ipynb  Precision_Recall.ipynb  activation_functions.py  gradient_descent.c  hyperparameter-tuning-with-hyperopt.ipynb  latexify_tutorial.ipynb  lorenz_curve.py  methods_to_tokenize.py  relu.py
Modelling/: GLM_Bike_Volume_NYC.ipynb
Modelling/.ipynb_checkpoints/: GLM_Bike_Volume_NYC-checkpoint.ipynb
Neural Networks/: basic_foward_backward_pass.py  convolution_image.py  convolution_layers.py  hyperparam_tune.py  optimisers.py  regularisation.py  rnn_example.py  sobel_operator.py
Optimisation/: knapsack_genetic_algo.py  sa_with_restart.py  simulated_annealing_tsp.py
Optimisation/brute-force/: brute_force_search.py  combinatorial_explosion.py  running_brute_force.py
Optimisation/hill-climbing/: hill_climb_module.py  run_algo.py
Optimisation/knapsack/: brute_force.f90  brute_force.py  example.f90  knapsack_genetic_algo.py  plot.py
Optimisation/linear-programming/: example_plot.py
Optimisation/simulated-annealing/: sa_with_restart.py  simulated_annealing_tsp.py
Optimisation/tabu-search/: README.md  pyproject.toml
Optimisation/tabu-search/src/: run_search.py  tabu_search_module.py
Software Engineering /code-quality-example/: black_example.py  flake8_example.py  mypy_example.py  pytest_example.py  test_pytest_example.py
Software Engineering /docker-example/: Dockerfile  basic_rf_model.py
Statistics/: Bayesian_Regression.ipynb  Bayesian_Updating.ipynb  Beta_Distribution.ipynb  markov_stationary.py  pymc3_tutorial.ipynb
Statistics/Distributions/: binomial.py  (+6 more)
Time Series/: autocorrelation.py  basic_forecasting.py  box_cox_transform.py  decomposition.py  holt_winters.py  holts_forecasting.py  partial_autocorrelation.py  residual_analysis.py  seasonality.py  simple_exp_smoothing.py  stationary.py
(+41 files in other folders)
