[tool.poetry]
name = "medium-articles"
version = "0.1.0"
description = "Poetry environmanet for code I used in my Medium blogs"
authors = ["Egor Howell <egorhowellbusiness@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.3.1"
pandas = "^1.3.5"
matplotlib = "^3.4.3"
scipy = "^1.7.3"
statsmodels = "^0.13.2"
hyperopt = "^0.2.5"
torch = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
