[tool.poetry]
name = "medium-articles"
version = "0.1.0"
description = "Poetry environmment for my medium blogs code"
authors = ["Egor Howell <egorhowellbusiness@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.4"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
torch = "^2.3.1"
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
hyperopt = "^0.2.7"
plotly = "^5.22.0"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
dynaconf = "^3.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
